# hippocrates

./: .gitignore  .gitmodules  ArtifactEvaluationREADME.md  CMakeLists.txt  LICENSE  README.md  build.env  install-deps.sh  requirements.txt  vscode.code-workspace  zenodo-setup.sh
artifact/: README.md
artifact/prebuilt/: memcached  memcached-fixed  memcached.linked.bc  p-clht_example  p-clht_example-fixed  redis-server  valgrind
artifact/prebuilt/pmdk_debug/: libpmem.so.1.0.0  libpmem.so.bc  libpmemblk.so.1.0.0  libpmemlog.so.1.0.0  libpmemobj.so.1.0.0  libpmemobj.so.bc  libpmempool.so.1.0.0  libvmem.so.1.0.0  libvmmalloc.so.1.0.0
cmake/: add_pmdk_unit_test.cmake  add_test_executable.cmake  functions.cmake
old_tests/: CMakeLists.txt  Makefile  branch_nvm_mod.c  branch_paths.c  recursion.c  run.sh  simple_cfg.c  simple_nvm_mod.c
results/: README.md  graph.py  redis_20.csv  redis_results.csv  redis_trace_10.csv
src/: BugFixer.cpp  BugFixer.hpp  BugReports.cpp  BugReports.hpp  CMakeLists.txt  FixGenerator.cpp  FixGenerator.hpp  FlowAnalyzer.cpp  FlowAnalyzer.hpp  PassUtils.cpp  PassUtils.hpp  PmBugFixer.cpp  PmBugFixerPass.cpp  pass_utils.cpp  pm_bug_fixer_pass.cpp
src/cleaner/: CMakeLists.txt  FunctionCleaner.cpp
src/common/: PassUtils.cpp  PassUtils.hpp
src/heuristic_pass/: CMakeLists.txt  nvm_function_info.cpp  nvm_function_info.hpp  pass_utils.hpp  persistence_heuristic.cpp
src/intrinsic/: CMakeLists.txt  persistent_intrinsics.c
src/remover/: CMakeLists.txt  FlushRemover.cpp
tests/: CMakeLists.txt
tests/manual/: 000_missing_flush_pmemcheck.c  000_missing_flush_pmtest.c  000_simple_bug.c  001_missing_fence_pmemcheck.c  001_missing_fence_pmtest.c  002_missing_flush_and_fence_pmemcheck.c  002_missing_flush_and_fence_pmtest.c  003_extra_flush_pmtest.c  004_extra_flush_complex_pmtest.c  005_immutable_fn_pmemcheck.c  CMakeLists.txt
tests/perf/: 000_simple_perf.c  CMakeLists.txt
tests/validation/: CMakeLists.txt  obj_constructor_TEST0_8bbb0af9c.patch  obj_first_next_TEST0_e71dfa41b.patch  obj_first_next_TEST1_e71dfa41b.patch  obj_mem_TEST0_e71dfa41b.patch  obj_pmalloc_mt_TEST1_7ff604b.patch  obj_redo_log_TEST0_8bbb0af9c.patch  pmem_memset_TEST0_e71dfa41b.patch  pmemobjcli_TEST0_2c2ba2e.patch  pmemobjcli_TEST0_60e24d2.patch  pmempool_sync_TEST0_0fd509d73.patch  pmemspoil_TEST0_8bbb0af9c.patch  rpmemd_db_TEST0_60e24d2.patch  testconfig.sh
tools/: CMakeLists.txt  Reports.py  apply-fixer  clean-functions  parse-trace  remove-flushes  run-redis  verify  verify-memcached
